# checkers

./: .gitignore  README.md  checkers.cabal  stack.yaml
app/: Main.hs
src/: Board.hs  Checkers.hs  HumanPlayer.hs  RandomChoices.hs  Types.hs
