name:                checkers
version:             0.1.0.0
-- synopsis:         Simple Checkers game emulation
-- description:      Based by the materials of http://fprog.ru/2009/issue1/dmitry-astapov-checkers/
homepage:            https://github.com/githubuser/checkers#readme
license:             BSD3
license-file:        LICENSE
author:              BarbedWire
maintainer:          barbedwire@tut.by
copyright:           2017 BarbedWire
category:            Pet
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Types, Board, RandomChoices, Checkers
  build-depends:       base >= 4.7 && < 5
                       , random
                       , transformers
  default-language:    Haskell2010

executable checkers-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , checkers
                     , transformers
  default-language:    Haskell2010

test-suite checkers-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , checkers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/checkers
